--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </section>
 
 <section>
-<a name="Color Codes">
+<a name="color">
   <h2>Aprenda connosco</h2>
     <p> Aqui irá encontrar dicas de como captar aquele momento... </p>
     <img src ="video/source.gif">
@@ -126,10 +126,14 @@
 </section>
 
 <section>
+  <a name="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/riZMNqWMgsQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
+
+
 <section>
+  <a name="table">
 <table border="1px">
   <th colspan="3"> Máquina fotográfica </th>
   <tr>
